[package]
name = 'myriad-runtime'
version = '2.3.6'
edition = '2021'
license = 'AGPL-3.0'
authors = ['Myriad Dev Team <dev@myriad.social>']
homepage = 'https://myriad.social'
repository = 'https://github.com/myriadsocial/myriad-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30' }

[dependencies]
# External Dependencies
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = '2.1.1', default-features = false, features = ['derive'] }
hex-literal = { version = '0.3.4', optional = true }
log = { version = '0.4.17', default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
beefy-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
beefy-merkle-tree = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-mmr-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-sandbox ={ git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-staking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-npos-elections = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }


## Substrate Frame Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false, optional = true }
frame-executive = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-try-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false, optional = true }

## Substrate Pallet Dependencies
pallet-assets = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-babe = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-beefy = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-beefy-mmr = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-collective = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-democracy = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-im-online = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-mmr = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-offences = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-offences-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false, optional = true }
pallet-preimage = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-scheduler = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false, features = ['historical'] }
pallet-session-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false, optional = true }
pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-uniques = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }

# Octopus Dependencies
## Octopus Pallet Dependencies
pallet-octopus-appchain = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.30-1', default-features = false }
pallet-octopus-appchain-benchmarking = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.30-1', default-features = false, optional = true }
pallet-octopus-bridge = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.30-1', default-features = false }
pallet-octopus-bridge-benchmarking = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.30-1', default-features = false, optional = true }
pallet-octopus-lpos = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.30-1', default-features = false }
pallet-octopus-upward-messages = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.30-1', default-features = false }

# Local Pallet
pallet-server = { path = '../pallets/server', default-features = false }
pallet-access-token = { path = '../pallets/access_token', default-features = false }
pallet-tipping = { path = '../pallets/tipping', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
	# External Dependencies
	'hex-literal',

	# Substrate Dependencies
	## Substrate Primitive Dependencies
	'sp-runtime/runtime-benchmarks',

	## Substrate Frame Dependencies
	'frame-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
	'frame-system-benchmarking/runtime-benchmarks',

	## Substrate Pallet Dependencies
	'pallet-babe/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-democracy/runtime-benchmarks',
	'pallet-grandpa/runtime-benchmarks',
	'pallet-im-online/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',
	'pallet-offences-benchmarking/runtime-benchmarks',
	'pallet-preimage/runtime-benchmarks',
	'pallet-scheduler/runtime-benchmarks',
	'pallet-session-benchmarking/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-uniques/runtime-benchmarks',
	'pallet-assets/runtime-benchmarks',

	# Octopus Dependencies
	## Octopus Pallet Dependencies
	'pallet-octopus-appchain-benchmarking/runtime-benchmarks',
	'pallet-octopus-bridge-benchmarking/runtime-benchmarks',
	'pallet-octopus-lpos/runtime-benchmarks',
	'pallet-octopus-upward-messages/runtime-benchmarks',

	# Local Pallet
	'pallet-server/runtime-benchmarks',
	'pallet-tipping/runtime-benchmarks',
]
std = [
	# External Dependencies
	'codec/std',
	'log/std',
	'scale-info/std',

	# Substrate Dependencies
	## Substrate Primitive Dependencies
	'beefy-primitives/std',
    'sp-api/std',
	'sp-block-builder/std',
	'sp-consensus-babe/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-io/std',
	'sp-mmr-primitives/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-staking/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
	'sp-sandbox/std',
	'sp-npos-elections/std',

	## Substrate Frame Dependencies
	'frame-benchmarking?/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system-benchmarking?/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'frame-try-runtime?/std',

	## Substrate Pallet Dependencies
    'pallet-assets/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-beefy-mmr/std',
    'pallet-beefy/std',
	'pallet-collective/std',
	'pallet-democracy/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-mmr/std',
	'pallet-offences/std',
	'pallet-preimage/std',
	'pallet-scheduler/std',
    'pallet-session/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
	'pallet-uniques/std',
	'pallet-offences-benchmarking/std',

	# Octopus Dependencies
	## Octopus Pallet Dependencies
	'pallet-octopus-appchain-benchmarking?/std',
	'pallet-octopus-appchain/std',
    'pallet-octopus-bridge-benchmarking?/std',
	'pallet-octopus-bridge/std',
    'pallet-octopus-lpos/std',
    'pallet-octopus-upward-messages/std',

	# Local Pallet
	'pallet-server/std',
	'pallet-access-token/std',
	'pallet-tipping/std',
]
try-runtime = [
	# Substrate Dependencies
	## Substrate Frame Dependencies
	'frame-try-runtime',
	'frame-executive/try-runtime',
	'frame-support/try-runtime',
	'frame-system/try-runtime',

	## Substrate Pallet Dependencies
	'pallet-assets/try-runtime',
	'pallet-authorship/try-runtime',
	'pallet-babe/try-runtime',
	'pallet-balances/try-runtime',
	'pallet-collective/try-runtime',
	'pallet-democracy/try-runtime',
	'pallet-grandpa/try-runtime',
	'pallet-im-online/try-runtime',
	'pallet-mmr/try-runtime',
	'pallet-offences/try-runtime',
	'pallet-preimage/try-runtime',
	'pallet-scheduler/try-runtime',
	'pallet-session/try-runtime',
	'pallet-sudo/try-runtime',
	'pallet-timestamp/try-runtime',
	'pallet-transaction-payment/try-runtime',
	'pallet-uniques/try-runtime',
]
wasmer-sandbox = ['sp-sandbox/wasmer-sandbox']
with-tracing = ['frame-executive/with-tracing']
