[package]
name = "pallet-escrow"
version = "1.0.0"
edition = "2018"
license = 'Unlicense'
authors = ['Myriad Dev Team <myriad.dev@blocksphere.id>']
homepage = 'https://myriad.social'
repository = 'https://github.com/myriadsocial/myriad-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External Dependencies
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }

# Local Dependencies
pallet-currency = { path = '../currencies', version = '1.0.0' }
pallet-platform = { path = '../platform', version = '1.0.0' }

# Substrate packages
## Substrate Frame Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false, optional = true }

## Substrate Primitive Dependencies
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }

[dev-dependencies]
# External Dependencies
serde = '1.0.119'
hex-literal = '0.3.3'

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking'
]
std = [
	'codec/std',

	'sp-std/std',

	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',

	'pallet-currency/std',
	'pallet-platform/std',
]
try-runtime = ['frame-support/try-runtime']
