[package]
name = 'pallet-post'
version = '1.0.0'
edition = '2018'
license = 'AGPL-3.0'
authors = ['Myriad Dev Team <myriad.dev@blocksphere.id>']
homepage = 'https://myriad.social'
repository = 'https://github.com/myriadsocial/myriad-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External Dependencies
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }

# Substrate packages
## Substrate Primitive Dependencies
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }

## Substrate Frame Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false, optional = true }

# Local Dependencies
pallet-platform = { path = '../platform', default-features = false }
pallet-token = { path = '../token', default-features = false }

[dev-dependencies]
# External Dependencies
serde = { version = '1.0.119', default-features = false }
hex-literal = { version = '0.3.3', default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',

	'sp-std/std',

	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',

	'pallet-platform/std',
	'pallet-token/std',
]
runtime-benchmarks = [
	'frame-benchmarking'
]
try-runtime = ['frame-support/try-runtime']
