[package]
name = 'pallet-reward'
version = '1.0.0'
edition = '2018'
license = 'Unlicense'
authors = ['Myriad <1@myriad.social>']
homepage = 'https://www.myriad.social'
repository = 'https://github.com/myriadsocial/myriad-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External Dependencies
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }

## Substrate Frame Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }

[dev-dependencies]
# External Dependencies
serde = '1.0.119'

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking'
]
std = [
	'codec/std',

	'sp-std/std',

	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
